<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#31B7C9"
    android:backgroundTint="#31B7C9"
    tools:context=".VitalsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="onHomeClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_resize" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/questrial_regular"
            android:gravity="center_horizontal"
            android:text="@string/vital_titles"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:fontFamily="@font/questrial_regular"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/vital_date"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/vital_timeofday"
            android:textSize="20sp"
            android:fontFamily="@font/questrial_regular"
            android:textColor="#FFFFFF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial_regular"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:text="@string/vital_temperature"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF" />

            <Spinner
                android:id="@+id/spinner_tem"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:backgroundTint="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial_regular"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:text="@string/vital_headache"/>

            <EditText
                android:id="@+id/edit_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:backgroundTint="#FFFFFF"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial_regular"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:text="@string/vital_cough"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFFFFF"
                        android:fontFamily="@font/questrial_regular"
                        android:text="@string/vital_coughchoice_1"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFFFFF"
                        android:fontFamily="@font/questrial_regular"
                        android:textColor="#FFFFFF"
                        android:text="@string/vital_coughchoice_2"

                        android:textSize="18sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFFFFF"
                        android:fontFamily="@font/questrial_regular"
                        android:text="@string/vital_coughchoice_3"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFFFFF"
                        android:fontFamily="@font/questrial_regular"
                        android:text="@string/vital_coughchoice_4"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/questrial_regular"
            android:background="#FFFFFF"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/vital_button_next"/>
    </LinearLayout>
</LinearLayout>