<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/diary_heading"
        android:layout_width="75dp"
        android:layout_height="34dp"
        android:layout_marginTop="48dp"
        android:text="@string/diary_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_label"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/diary_entry"
        android:layout_width="219dp"
        android:layout_height="271dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bold"
        android:layout_width="33dp"
        android:layout_height="37dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bold"
        app:layout_constraintBottom_toTopOf="@+id/diary_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/italics"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/italics"
        app:layout_constraintBottom_toTopOf="@+id/diary_entry"
        app:layout_constraintStart_toEndOf="@+id/bold" />

    <Button
        android:id="@+id/underline"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/underline"
        app:layout_constraintBottom_toTopOf="@+id/diary_entry"
        app:layout_constraintStart_toEndOf="@+id/italics" />

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="78dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_button" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

</androidx.constraintlayout.widget.ConstraintLayout>