<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31B7C9"
    android:backgroundTint="#31B7C9"
    tools:context=".DiaryActivity">

    <TextView
        android:id="@+id/diary_heading"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/diary_heading"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="231dp"
        android:layout_height="41dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/questrial_regular"
        android:inputType="date"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/home_button" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="46dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/title_label"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextStory"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/storybox_label"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial_regular"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize = "20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/underline"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:text="@string/underline"
        app:layout_constraintStart_toEndOf="@+id/italics"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/italics"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:text="@string/italics"
        app:layout_constraintStart_toEndOf="@+id/bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/bold"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:text="@string/bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onHomeClick"
        android:fontFamily="@font/questrial_regular"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_resize" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="231dp"
        android:layout_height="47dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/questrial_regular"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/title_label"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/questrial_regular"
        android:textColor="#000000"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="46dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/date_label"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button" />

</androidx.constraintlayout.widget.ConstraintLayout>