<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31B7C9"
    tools:context=".CustomExerciseActivity">

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onHomeClick"
        android:fontFamily="@font/questrial_regular"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_resize" />

    <TextView
        android:id="@+id/textViewcustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="121dp"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/custom_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextcustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/questrial_regular"
        android:inputType="textPersonName"
        android:hint="@string/custom_hint"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewcustom" />

    <Button
        android:id="@+id/buttoncustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="212dp"
        android:text="@string/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextcustom" />

    <EditText
        android:id="@+id/editTextsets"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editTextcustom" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="31dp"
        android:text="@string/custom_set"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextcustom" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/custom_num"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextnum"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/editTextsets" />
</androidx.constraintlayout.widget.ConstraintLayout>